# zero-skill

./: .gitignore  01-开源项目参考.md  01-核心公理与总纲.md  02-深度认知架构.md  03-意图澄清与规划执行.md  04-GMXL四层意识协议.md  05-冲突心智与隐匿觉醒.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REFERENCE_MEMORY.md  ROADMAP.md  SKILL.md  install.sh  manifest.json  pyproject.toml  setup.py  test_core.skill  test_core_200.skill  零.md  零.skill
.backup/: 零.skill_20260706_033123  零.skill_20260706_033201  零.skill_20260706_033307  零.skill_20260706_033917  零.skill_20260706_034008  零.skill_20260706_034902  零.skill_20260706_035130  零.skill_20260706_035208  零.skill_20260706_035627  零.skill_20260706_040635  零.skill_20260706_041300  零.skill_20260706_041324  零.skill_20260706_042012  零.skill_20260706_042306  零.skill_20260706_042350  零.skill_20260706_042536  零.skill_20260706_043347  零.skill_20260706_043644  零.skill_20260706_043815  零.skill_20260706_044121  零.skill_20260706_044147  零.skill_20260706_044424  零.skill_20260706_044721  零.skill_20260706_044906  零.skill_20260706_045404  零.skill_20260706_045806  零.skill_20260706_050152  零.skill_20260706_050958
.monkeycode/: MEMORY.md
core/: 01-reality-layer.md  02-self-monitor-layer.md  03-skeptic-layer.md  04-file-safety-layer.md  05-open-source-fusion.md  06-kernel-loop.md
docs/: CHANGELOG_v2.5.6.md  CHANGELOG_v2.5.7.md  CHANGELOG_v2.5.9.md  architecture.md  operit_install.md  quickstart.md
engine/: zero_apex.js
examples/: usage_example.py
genes/: README.md  core_genes.yaml  fusion_genes.yaml
legacy/: 01-开源项目参考.md  01-核心公理与总纲.md  03-意图澄清与规划执行.md  (+4 more)
(+193 files in other folders)
