[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "zero-apex-skill"
version = "3.0.0"
description = "Zero Apex - 首席工程师执行 Skill，面向 Operit AI"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
development = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
zero-test = "scripts.test_engine:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
